--- a/index.html
+++ b/index.html
@@ -1,9 +1,58 @@
-<html>
-  <head> 
-    <title>Grumpy's World</title>
-  </head>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
-  <body>
-    <h1>Coming Soon...</h1>
-  </body>
+<meta http-equiv="Content-Language" content="en-us">
+<title>Grumpy's World</title>
+<meta name="keywords" content="Reptoids, reptilian, dinosauroid, John Rhodes, ufo, alien, ovni, Bay Area UFO, Dale Russel, underground, G. E. Kincaid, dinosaurs ">
+</head>
+
+<body link="#00FF00" vlink="#008000" alink="#00FF00" text="#FFFF00" background="./imgs/corteza.jpg">
+	<div align="center">
+
+	<br><br><br><br><br>
+	<font face="Arial"><b><font color="#E90000" size="15">Grumpy's World</font><font size="4" color="#E90000"><br><br><br>
+</div>
+<div align="center">
+	<img border="0" src="./imgs/placeholder.png"><br>
+		
+&nbsp;</font></b></font></p>
+
+	<div align="right">
+	<table border="0" width="95%" cellspacing="1" cellpadding="0">
+		<tbody><tr>
+			<td>
+			<div align="center">
+<p align="left"><b><font face="Arial">
+Hey Frank, in June of 1988, seventeen-year-old 
+Christopher Davis stopped to change a flat tire along Scape Ore Swamp. As he was 
+finishing the task and putting the flat tire in the trunk, he heard a noise 
+coming from a nearby field. As he peered off into the darkness, he saw a seven 
+foot tall creature with red glowing eyes running towards him on its two hind 
+legs and grunting as it closed in. Christopher jumped into the car and sped off 
+down the road.</font></b></p>
+<p align="left">&nbsp;</p>
+<p align="left"><font face="Arial"><b>Just as he thought his nightmare was over, 
+Christopher heard a crashing thud above him and saw a large, three-fingered hand 
+with scales and long claws reach over his windshield. Another hand was trying to 
+pry open his drivers side door. Christopher, now petrified and scared for his 
+life, swerved the vehicle on the road and the creature suddenly fell off. He 
+didn't know what kind of animal ran on two legs and could catch up with his car, 
+which was traveling at a relatively high speed. He had managed to get away and 
+that's all that mattered.</b></font></p>
+<p align="left">&nbsp;</p>
+<p align="left"><font face="Arial"><b>When Christopher arrived at home shaking 
+and crying, his father settled him down and Christopher began to tell his 
+parents about what had happened. His dad knew that his son wasn't usually an 
+imaginative storyteller, and Christopher's highly emotional state compelled him 
+to believe that Christopher did, in fact, see something highly unusual. </b>
+</font></p>
+<p align="left">&nbsp;</p>
+<p align="left"><b><font face="Arial">
+When Lee County Sheriff Liston Truesdale heard about what had occurred to Christopher 
+Davis, he interviewed him and asked Christopher if he would be willing to take a 
+lie detector test. Liston figured that if Christopher was really making up a 
+story for attention, the idea of taking a lie detector test would make him 
+retract his story. To Liston's surprise, Christopher happily agreed to be 
+tested, adding that he was sure of what happened and of what he had encountered.</font></b></p>
+<p align="left">&nbsp;</p>
+</body>
 </html>
