--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <meta name="keywords" content="Reptoids, reptilian, dinosauroid, John Rhodes, ufo, alien, ovni, Bay Area UFO, Dale Russel, underground, G. E. Kincaid, dinosaurs ">
 </head>
 
-<body link="#00FF00" vlink="#008000" alink="#00FF00" text="#FFFF00" background="./imgs/corteza.jpg">
+<body link="#00FF00" vlink="#008000" alink="#00FF00" text="#FFFF00" background="corteza.jpg">
 	<div align="center">
 
 	<br><br><br><br><br>
 	<font face="Arial"><b><font color="#E90000" size="15">Grumpy's World</font><font size="4" color="#E90000"><br><br><br>
 </div>
 <div align="center">
-	<img border="0" src="./imgs/placeholder.png"><br>
+	<img border="0" src=".placeholder.png"><br>
 		
 &nbsp;</font></b></font></p>
 
