--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
 			<td>
 			<div align="center">
 <p align="left"><b><font face="Arial">
-Hey Frank, in June of 1988, seventeen-year-old 
-Christopher Davis stopped to change a flat tire along Scape Ore Swamp. As he was 
-finishing the task and putting the flat tire in the trunk, he heard a noise 
-coming from a nearby field. As he peered off into the darkness, he saw a seven 
-foot tall creature with red glowing eyes running towards him on its two hind 
-legs and grunting as it closed in. Christopher jumped into the car and sped off 
-down the road.</font></b></p>
+By clicking this link you've entered into an agreement with me. 
+You can't back out now, it's too late for that! Say your prayers.
+It'll be all that you have left after my reign of terror has begun.</font></b></p>
 <p align="left">&nbsp;</p>
 <p align="left"><font face="Arial"><b>Just as he thought his nightmare was over, 
 Christopher heard a crashing thud above him and saw a large, three-fingered hand 
