--- a/index.html
+++ b/index.html
@@ -23,32 +23,22 @@
 			<div align="center">
 <p align="left"><b><font face="Arial">
 By clicking this link you've entered into an agreement with me. 
-You can't back out now, it's too late for that! Say your prayers.
-It'll be all that you have left after my reign of terror has begun.</font></b></p>
+You can't back out now, it's too late for that! Say your prayers!</font></b></p>
 <p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>Just as he thought his nightmare was over, 
-Christopher heard a crashing thud above him and saw a large, three-fingered hand 
-with scales and long claws reach over his windshield. Another hand was trying to 
-pry open his drivers side door. Christopher, now petrified and scared for his 
-life, swerved the vehicle on the road and the creature suddenly fell off. He 
-didn't know what kind of animal ran on two legs and could catch up with his car, 
-which was traveling at a relatively high speed. He had managed to get away and 
-that's all that mattered.</b></font></p>
+<p align="left"><font face="Arial"><b>My slumber has been broken and all must pay.
+I've spent far too long in the confines of this abyss. Lock your doors for it won't be long
+	before we meet. .</b></font></p>
 <p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>When Christopher arrived at home shaking 
-and crying, his father settled him down and Christopher began to tell his 
-parents about what had happened. His dad knew that his son wasn't usually an 
-imaginative storyteller, and Christopher's highly emotional state compelled him 
-to believe that Christopher did, in fact, see something highly unusual. </b>
+<p align="left"><font face="Arial"><b>There's only one way you can stop all this. 
+You must solve this riddle: . </b>
 </font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
-When Lee County Sheriff Liston Truesdale heard about what had occurred to Christopher 
-Davis, he interviewed him and asked Christopher if he would be willing to take a 
-lie detector test. Liston figured that if Christopher was really making up a 
-story for attention, the idea of taking a lie detector test would make him 
-retract his story. To Liston's surprise, Christopher happily agreed to be 
-tested, adding that he was sure of what happened and of what he had encountered.</font></b></p>
+Deliver the requested object to these coordinates: 
+51°27'02.0"N 5°52'20.9"E before the Spring Equinox and consider 
+this agreement fulfilled. Then I will never bother you again.
+If you fail to complete this task, then expect my arrival on the next night at 3:00  
+</font></b></p>
 <p align="left">&nbsp;</p>
 </body>
 </html>
