--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 	before we meet. .</b></font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><font face="Arial"><b>There's only one way you can stop all this. 
-You must solve this riddle: . </b>
+You must solve this riddle: 
+
+I am the space between silence and sound,
+Where the edges of time can blur and rebound.
+I carry the weight of moments unmet,
+Yet dissolve the clarity when you’re in debt.
+
+I wait in the shadows of morning's embrace,
+A fleeting breath in an endless race.
+I shift with the rhythm of stillness and haste,
+Never the same, yet never erased.
+
+Born of heat, yet I leave no trace,
+I move with intent, but know no face.
+I guide the weary and steady the pace,
+But touch me too much, and I may leave no grace.
+
+What am I?
+ . </b>
 </font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
