--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 		<tbody><tr>
 			<td>
 			<div align="center">
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 By clicking this link you've entered into an agreement with me. 
 You can't back out now, it's too late for that! Say your prayers!</font></b></p>
 <p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>My slumber has been broken and all must pay.
+<p align="center"><font face="Arial"><b>My slumber has been broken and all must pay.
 I've spent far too long in the confines of this abyss. Lock your doors for it won't be long
 	before we meet. .</b></font></p>
 <p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>There's only one way you can stop all this. 
+<p align="center"><font face="Arial"><b>There's only one way you can stop all this. 
 You must solve this riddle: 
 
 I am the space between silence and sound,
@@ -51,7 +51,7 @@ What am I?
  . </b>
 </font></p>
 <p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 Deliver the requested object to these coordinates: 
 51°27'02.0"N 5°52'20.9"E before the Spring Equinox and consider 
 this agreement fulfilled. Then I will never bother you again.
