--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ What am I?
 </font></p>
 <p align="left">&nbsp;</p>
 <p align="center"><b><font face="Arial">
-Deliver the requested object to these coordinates: 
+Deliver your answer to these coordinates: 
 51°27'02.0"N 5°52'20.9"E before the Spring Equinox and consider 
 this agreement fulfilled. Then I will never bother you again.
 If you fail to complete this task, then expect my arrival on the next night at 3:00  
