--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 <p align="center"><font face="Arial"><b>There's only one way you can stop all this. 
 You must solve this riddle: 
 
-I rise before the world begins,
-In quiet vessels, I take my spin.
-I follow the rhythm of steady hands,
-But vanish when the moment lands.
+I am the space between silence and sound,
+Where the edges of time can blur and rebound.
+I carry the weight of moments unmet,
+Yet dissolve the clarity when you’re in debt.
 
-I come in silence, yet stir the air,
-I travel in circles, but you won't find me there.
-I walk with the weary, guide the tired,
-In stillness and motion, I am admired.
+I wait in the shadows of morning's embrace,
+A fleeting breath in an endless race.
+I shift with the rhythm of stillness and haste,
+Never the same, yet never erased.
 
-Though I may linger, I never stay,
-I am a shadow that fades away.
-In the early hours or under the moon’s glow,
-I wait for the one who needs to go.
+Born of heat, yet I leave no trace,
+I move with intent, but know no face.
+I guide the weary and steady the pace,
+But touch me too much, and I may leave no grace.
 
 What am I?
  . </b>
