--- a/index.html
+++ b/index.html
@@ -32,20 +32,23 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 <p align="center"><font face="Arial"><b>There's only one way you can stop all this. 
 You must solve this riddle: 
 
-I rise before the world begins, 
-In quiet vessels, I take my spin. 
-I follow the rhythm of steady hands, 
-But vanish when the moment lands. 
-	
-I come in silence, yet stir the air, 
-I travel in circles, but you won't find me there. 
-I walk with the weary, guide the tired, 
-In stillness and motion, I am admired. 
-	
-Though I may linger, I never stay, 
-I am a shadow that fades away. 
-In the early hours or under the moon’s glow, 
-I wait for the one who needs to go.
+I rise before the world begins,
+In quiet vessels, I start my spin.
+Guided by hands both firm and sure,
+I vanish when the moment’s pure.
+
+I come without a sound to make,
+But stir the air with every wake.
+I circle and swirl, but I won’t stay,
+A fleeting presence, swept away.
+
+I walk with the tired, lead them through,
+In silence or motion, I carry you.
+Though you may find me in the dawn,
+I disappear when the day is drawn.
+
+In the night or morning’s first light,
+I await the one who seeks respite.
 	
 What am I? 
  . </b>
