--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ Deliver your answer to these coordinates:
 this agreement fulfilled. 
 
 Then I will never bother you again.
-If you fail to complete this task, then expect my arrival on the next night at 3:00  
+If you fail to complete this task within the given time, 
+then expect my arrival on the next night at 3:00  
 </font></b></p>
 <p align="left">&nbsp;</p>
 </body>
