--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta http-equiv="Content-Language" content="en-us">
 <title>Grumpy's World</title>
-<meta name="keywords" content="Reptoids, reptilian, dinosauroid, John Rhodes, ufo, alien, ovni, Bay Area UFO, Dale Russel, underground, G. E. Kincaid, dinosaurs ">
+<meta name=
 </head>
 
 <body link="#00FF00" vlink="#008000" alink="#00FF00" text="#FFFF00" background="corteza.jpg">
