--- a/index.html
+++ b/index.html
@@ -29,27 +29,36 @@ You can't back out now, it's too late for that! Say your prayers!</font></b></p>
 I've spent far too long in the confines of this abyss. Lock your doors for it won't be long
 	before we meet. .</b></font></p>
 <p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>There's only one way you can stop all this. 
+<p align="left"><font face="Arial"><b>
+There's only one way you can stop all this. 
 You must solve this riddle: 
-
+<p align="left"><b><font face="Arial">
 I rise before the world begins,
 In quiet vessels, I start my spin.
 Guided by hands both firm and sure,
 I vanish when the moment’s pure.
-
+</font></b></p>
+<p align="left">&nbsp;</p>
+<p align="left"><b><font face="Arial">
 I come without a sound to make,
 But stir the air with every wake.
 I circle and swirl, but I won’t stay,
 A fleeting presence, swept away.
-
+</font></b></p>
+<p align="left">&nbsp;</p>
+<p align="left"><b><font face="Arial">
 I walk with the tired, lead them through,
 In silence or motion, I carry you.
 Though you may find me in the dawn,
 I disappear when the day is drawn.
-
+</font></b></p>
+<p align="left">&nbsp;</p>
+<p align="left"><b><font face="Arial">
 In the night or morning’s first light,
 I await the one who seeks respite.
-	
+</font></b></p>
+<p align="left">&nbsp;</p>
+<p align="left"><b><font face="Arial">
 What am I? 
  . </b>
 </font></p>
