--- a/index.html
+++ b/index.html
@@ -34,29 +34,37 @@ There's only one way you can stop all this.
 You must solve this riddle: 
 <p align="left"><b><font face="Arial">
 I rise before the world begins,
+<p align="left"><b><font face="Arial">
 In quiet vessels, I start my spin.
+<p align="left"><b><font face="Arial">
 Guided by hands both firm and sure,
+<p align="left"><b><font face="Arial">
 I vanish when the moment’s pure.
-</font></b></p>
+</b></font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
 I come without a sound to make,
+<p align="left"><b><font face="Arial">
 But stir the air with every wake.
+<p align="left"><b><font face="Arial">
 I circle and swirl, but I won’t stay,
+<p align="left"><b><font face="Arial">
 A fleeting presence, swept away.
-</font></b></p>
+</b></font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
 I walk with the tired, lead them through,
+<p align="left"><b><font face="Arial">
 In silence or motion, I carry you.
+<p align="left"><b><font face="Arial">
 Though you may find me in the dawn,
+<p align="left"><b><font face="Arial">
 I disappear when the day is drawn.
-</font></b></p>
-<p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
 In the night or morning’s first light,
+<p align="left"><b><font face="Arial">
 I await the one who seeks respite.
-</font></b></p>
+</b></font></p>
 <p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
 What am I? 
@@ -66,8 +74,6 @@ What am I?
 <p align="left"><b><font face="Arial">
 Deliver your answer to these coordinates: 
 51°27'02.0"N 5°52'20.9"E 
-</font></p>
-<p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">	
 before the Spring Equinox and consider 
 this agreement fulfilled. Then I will never bother you again.
