--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@ Deliver your answer to these coordinates:
 51°27'02.0"N 5°52'20.9"E 
 <p align="left"><b><font face="Arial">	
 before the Spring Equinox and consider 
-this agreement fulfilled. Then I will never bother you again.
+this agreement fulfilled. 
+<p align="left"><b><font face="Arial">
+Then I will never bother you again.
 If you fail to complete this task within the given time, 
 then expect my arrival on the next night at 3:00  
 </font></b></p>
