--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 <p align="left"><font face="Arial"><b>
 There's only one way you can stop all this. 
 You must solve this riddle: 
+</b></font></p>
+<p align="left">&nbsp;</p>
 <p align="left"><b><font face="Arial">
 I rise before the world begins,
 <p align="left"><b><font face="Arial">
