--- a/index.html
+++ b/index.html
@@ -21,69 +21,69 @@
 		<tbody><tr>
 			<td>
 			<div align="center">
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 By clicking this link you've entered into an agreement with me. 
 You can't back out now, it's too late for that! Say your prayers!</font></b></p>
-<p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>My slumber has been broken and all must pay.
+<p align="center">&nbsp;</p>
+<p align="center"><font face="Arial"><b>My slumber has been broken and all must pay.
 I've spent far too long in the confines of this abyss. Lock your doors for it won't be long
 	before we meet. .</b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><font face="Arial"><b>
+<p align="center">&nbsp;</p>
+<p align="center"><font face="Arial"><b>
 There's only one way you can stop all this. 
 You must solve this riddle: 
 </b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center">&nbsp;</p>
+<p align="center"><b><font face="Arial">
 I rise before the world begins,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 In quiet vessels, I start my spin.
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 Guided by hands both firm and sure,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 I vanish when the moment’s pure.
 </b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center">&nbsp;</p>
+<p align="center"><b><font face="Arial">
 I come without a sound to make,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 But stir the air with every wake.
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 I circle and swirl, but I won’t stay,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 A fleeting presence, swept away.
 </b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center">&nbsp;</p>
+<p align="center"><b><font face="Arial">
 I walk with the tired, lead them through,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 In silence or motion, I carry you.
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 Though you may find me in the dawn,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 I disappear when the day is drawn.
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 In the night or morning’s first light,
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 I await the one who seeks respite.
 </b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center">&nbsp;</p>
+<p align="center"><b><font face="Arial">
 What am I? 
  . </b>
 </font></p>
-<p align="left">&nbsp;</p>
-<p align="left"><b><font face="Arial">
+<p align="center">&nbsp;</p>
+<p align="center"><b><font face="Arial">
 Deliver your answer to these coordinates: 
 51°27'02.0"N 5°52'20.9"E 
-<p align="left"><b><font face="Arial">	
+<p align="center"><b><font face="Arial">	
 before the Spring Equinox and consider 
 this agreement fulfilled. 
-<p align="left"><b><font face="Arial">
+<p align="center"><b><font face="Arial">
 Then I will never bother you again.
 If you fail to complete this task within the given time, 
 then expect my arrival on the next night at 3:00  
 </font></b></p>
-<p align="left">&nbsp;</p>
+<p align="center">&nbsp;</p>
 </body>
 </html>
