--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 	before we meet. .</b></font></p>
 <p align="center">&nbsp;</p>
 <p align="center"><font face="Arial"><b>
-There's only one way you can stop all this. 
+There's only one way you can stop all of this. 
 You must solve this riddle: 
 </b></font></p>
 <p align="center">&nbsp;</p>
