--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		
 &nbsp;</font></b></font></p>
 
-	<div align="right">
+	<div align="center">
 	<table border="0" width="95%" cellspacing="1" cellpadding="0">
 		<tbody><tr>
 			<td>
