--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ this agreement fulfilled.
 <p align="center"><b><font face="Arial">
 Then I will never bother you again.
 If you fail to complete this task within the given time, 
-then expect my arrival on the next night at 3:00  
+expect my arrival on the next night at 3:00  
 </font></b></p>
 <p align="center">&nbsp;</p>
 </body>
