--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ What am I?
 <p align="center">&nbsp;</p>
 <p align="center"><b><font face="Arial">
 Deliver your answer to these coordinates: 
+<p align="center"><b><font face="Arial">
 51°27'02.0"N 5°52'20.9"E 
 <p align="center"><b><font face="Arial">	
 before the Spring Equinox and consider 
