--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Deliver your answer to these coordinates:
 <p align="center"><b><font face="Arial">
 51°27'02.0"N 5°52'20.9"E 
 <p align="center"><b><font face="Arial">	
-before the Spring Equinox and consider 
+Do this before the Spring Equinox and consider 
 this agreement fulfilled. 
 <p align="center"><b><font face="Arial">
 Then I will never bother you again.
