--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<div align="center">
 <p align="center"><b><font face="Arial">
 By clicking this link you've entered into an agreement with me. 
-You can't back out now, it's too late for that! Say your prayers!</font></b></p>
-<p align="center">&nbsp;</p>
-<p align="center"><font face="Arial"><b>My slumber has been broken and all must pay.
+You can't back out now, it's too late for that! Say your prayers!
+<p align="center"><font face="Arial"><b>
+My slumber has been broken and all must pay.
 I've spent far too long in the confines of this abyss. Lock your doors for it won't be long
 	before we meet. .</b></font></p>
 <p align="center">&nbsp;</p>
