--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ I've spent far too long in the confines of this abyss. Lock your doors for it wo
 before we meet.
 <p align="center"><font face="Arial"><b>
 There's only one way you can stop all of this. 
+<p align="center"><font face="Arial"><b>
 You must solve this riddle: 
 </b></font></p>
 <p align="center">&nbsp;</p>
