--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<font face="Arial"><b><font color="#E90000" size="15">Grumpy's World</font><font size="4" color="#E90000"><br><br><br>
 </div>
 <div align="center">
-	<img border="0" src="placeholder.png"><br>
+	<img border="0" src="P1011252.JPG"><br>
 		
 &nbsp;</font></b></font></p>
 
